--- a/frontend/public/tools.html
+++ b/frontend/public/tools.html
@@ -10,6 +10,7 @@
   <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
   <style>body.preload .navbar,body.preload main#tools-root,body.preload footer,body.preload .theme-toggle{opacity:0;}body.app-ready .navbar,body.app-ready main#tools-root,body.app-ready footer,body.app-ready .theme-toggle{opacity:1;transition:opacity .25s ease;}</style>
+<script src="/dist/ToastHost-GQ52DK7L.js"></script>
 </head>
 <body class="preload">
   <nav class="navbar">
@@ -34,6 +35,6 @@
   </footer>
   <button class="btn secondary theme-toggle" id="themeToggle" aria-label="Toggle dark mode">🌗</button>
   <script>window.API_BASE='http://localhost:3000';</script>
-  <script defer src="/dist/toolsApp-XNSA35GH.js"></script>
+  <script defer src="/dist/toolsApp-AU4RUTK7.js"></script>
 </body>
 </html>
